<resources>
    <string name="app_name">tau clock</string>
    <string name="title_activity_settings">Settings</string>

    <string name="location_category_title">Location</string>
    <string name="provider_title">Location Provider</string>
    <string name="manual_location_title">Manual Location</string>

    <string name="timezone_category_title">Time</string>
    <string name="timezone_title">Timezone Provider</string>
    <string name="manual_timezone_title">Manual Timezone</string>

    <string name="offset_category_title">Offset</string>
    <string name="offset_title">Offset Provider</string>
    <string name="manual_offset_title">Manual Offset</string>

    <string name="light_dark_category_title">Light/Darkness</string>
    <string name="light_title">Light</string>
    <string name="dark_title">Dark</string>
</resources>
