<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/location_category_title">

        <ListPreference
            android:defaultValue="best"
            android:entries="@array/provider_values"
            android:entryValues="@array/provider_values"
            android:key="provider"
            android:title="@string/provider_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="0.0000,0.0000"
            android:key="manual_location"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/manual_location_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/timezone_category_title">
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/timezone_values"
            android:entryValues="@array/timezone_values"
            android:key="timezone"
            android:title="@string/timezone_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="Etc/GMT+0"
            android:entries="@array/timezones"
            android:entryValues="@array/timezones"
            android:title="@string/manual_timezone_title"
            app:key="manual_timezone"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/offset_category_title">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="none"
            android:entries="@array/offset_values"
            android:entryValues="@array/offset_values"
            android:key="offset"
            android:title="@string/offset_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="+0"
            android:key="manual_offset"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/manual_offset_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
